Tests/Should_fail/pattern2.int
let t2 = fn (x, y) -> return 4
let t3 = t2 3
